streaming/04.sonarr-deployment.yaml
#
# Sonarr deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: streaming
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1002
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - ${NAME_SERVER_IP}
        searches:
        - default.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 1002
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media/
        - name: nas-media
          mountPath: /mnt/data/media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: nas-media
        persistentVolumeClaim:
          claimName: nas-media-pvc
---
#
# Sonarr Node Port
#
apiVersion: v1
kind: Service
metadata:
  name: sonarr-node
  namespace: streaming
spec:
  type: NodePort
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
    nodePort: 30286
---
#
# Sonarr LoadBalancer
#
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: streaming
spec:
  type: LoadBalancer
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
