streaming/05.radarr-deployment.yaml
#
# Radarr Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: streaming
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
          runAsUser: 1000
          runAsGroup: 1002
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - ${NAME_SERVER_IP}
        searches:
        - default.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 1002
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media 
        - name: nas-media
          mountPath: /mnt/data/media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: nas-media
        persistentVolumeClaim:
          claimName: nas-media-pvc
---
#
# Radarr Node Port
#
apiVersion: v1
kind: Service
metadata:
  name: radarr-node
  namespace: streaming
spec:
  type: NodePort
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
    nodePort: 30726
---
#
# Radarr LoadBalancer
#
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: streaming
spec:
  type: LoadBalancer
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 7878
