streaming/08.jellyfin-deployment.yaml
#
# Jellyfin Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: streaming
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1002
        # For GPU passthrough.
        supplementalGroups:
          - 44  # Video
          - 993 # Render
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        securityContext: 
          runAsUser: 1000
          runAsGroup: 1002
          privileged: true
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: gpu-device
          mountPath: /dev/dri
        - name: config
          mountPath: /config
        # SSD pvc
        - name: media
          mountPath: /data/media
        - name: media
          mountPath: /data/meadi/tv
          subPath: tv
        - name: media
          mountPath: /data/meadia/movies
          subPath: movies
        - name: cache
          mountPath: /cache
        # nfs pvc
        - name: nas-media
          mountPath: /mnt/data/media/
        - name: nas-media
          mountPath: /mnt/data/media/tv
          subPath: tv
        - name: nas-media
          mountPath: /mnt/data/media/movies
          subPath: movies
      volumes:
      - name: gpu-device
        hostPath:
          path: /dev/dri
          type: Directory
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: nas-media
        persistentVolumeClaim:
          claimName: nas-media-pvc
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
---
#
# Jellyfin Node Port
#
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-node
  namespace: streaming
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
    nodePort: 30593
---
#
# Jellyfin LoadBalancer
#
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: streaming
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
  - port: 80
    targetPort: 8096
